--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "https": "^1.0.0",
+    "https-browserify": "^1.0.0",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -26,6 +29,8 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "sort-by": "^1.2.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -51,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-cli": "^5.1.4"
   }
 }
