--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.0.3",
     "https": "^1.0.0",
     "https-browserify": "^1.0.0",
+    "js-base64": "^3.7.5",
     "jwt-decode": "^3.1.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
